# FastSIMD

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Example.cpp  FastSIMD.vcxproj  FastSIMD.vcxproj.filters  LICENSE  README.md
.github/workflows/: ci.yml
DispatchClass/: CMakeLists.txt
DispatchClass/cmake/: ClassSIMD.cmake  feature_set_source.cpp.in  simd_lib_config.h.in
DispatchClass/impl/: DispatchClassImpl.h  FeatureSetList.h
DispatchClass/include/FastSIMD/: DispatchClass.h
Example/: Example.cpp  Example.h  Example.inl  FastSIMD.sln  FastSIMD.vcxproj  FastSIMD.vcxproj.filters  SIMDUnitTest.cpp  SIMDUnitTest.h  main.cpp
FastSIMD/: FS_Class.inc  FS_Class.inl  FS_IntelliSenseHelper.h  FS_Source.inc  FastSIMD.cpp  FastSIMD.h  FastSIMD_AVX2.cpp  FastSIMD_BuildList.h  FastSIMD_Config.h  FastSIMD_Level_AVX2.cpp  FastSIMD_Level_SSE2.cpp  FastSIMD_Level_SSE3.cpp  FastSIMD_Level_SSE41.cpp  FastSIMD_Level_SSE42.cpp  FastSIMD_Level_SSSE3.cpp  FastSIMD_Level_Scalar.cpp
FastSIMD/Internal/: 00_Scalar.h  02_SSE2.h  08_AVX2.h  AVX.h  DynamicIncluder.h  FunctionList.h  SSE.h  Scalar.h  SourceBuilder.h  TypeList.h  VecTools.h
FastSIMD/Internal_/: CPPBuilder.h
FastSIMD/SIMDTypes/: 08_AVX2.h  Base.h  TypeList.h
FastSIMD/SIMDTypes_/: 00_Scalar.h  02_SSE2.h  FunctionList.h
FastSIMD/internal/: CPPBuilder.h
FastSIMD/simdtypes/: 00_Scalar.h  02_SSE2.h  AVX2.h  Base.h  FunctionList.h  SSE2.h  Scalar.h  TypeList.h
cmake/: ArchDetect.cmake  ArchDetect.cpp  ClassSIMD.cmake  feature_set_source.cpp.in  simd_lib_config.h.in
dispatch/: CMakeLists.txt
dispatch/cmake/: ClassSIMD.cmake  feature_set_source.cpp.in  simd_lib_config.h.in
dispatch/impl/: DispatchClassImpl.h
example/: CMakeLists.txt  example.inl  main.cpp
example_/: CMakeLists.txt
examples/: CMakeLists.txt
examples/dispatch_library/: CMakeLists.txt  example.h
examples/header_only/: CMakeLists.txt  main.cpp
include/FastSIMD/: DispatchClass.h  FastSIMD.h  NewDispatchClass.h  ToolSet.h
include/FastSIMD/ToolSet/: DispatchClassImpl.h  Functions.h  Register.h
include/FastSIMD/ToolSet/ARM/: ARM.h  NEON.h
include/FastSIMD/ToolSet/ARM/128/: f32x4.h  i32x4.h  m32x4.h
include/FastSIMD/ToolSet/Generic/: Functions.h  Register.h  Scalar.h  Trig.h
include/FastSIMD/ToolSet/Generic/Scalar/: f32x1.h  i32x1.h  mNx1.h
include/FastSIMD/ToolSet/Scalar/: Scalar.h
include/FastSIMD/ToolSet/Scalar/1/: i32x1.h
include/FastSIMD/ToolSet/WASM/: WASM.h
include/FastSIMD/ToolSet/WASM/128/: f32x4.h  i32x4.h  m32x4.h
include/FastSIMD/ToolSet/x86/: AVX.h  AVX512.h  SSE.h  x86.h
include/FastSIMD/ToolSet/x86/128/: f32x4.h  i32x4.h  m32x4.h
include/FastSIMD/ToolSet/x86/256/: f32x8.h  i32x8.h  m32x8.h
include/FastSIMD/ToolSet/x86/4/: f32x4.h  i32x4.h  m32x4.h
include/FastSIMD/ToolSet/x86/512/: f32x16.h  i32x16.h  m32x16.h  mNx16.h
include/FastSIMD/Utility/: ArchDetect.h  Export.h  FeatureEnums.h  FeatureSetList.h
src/: FastSIMD.cpp
tests/: CMakeLists.txt  test.cpp  test.h  test.inl
